@@ -37,19 +37,20 @@ void VectorIndexFeature::collectOptions(
     std::shared_ptr<options::ProgramOptions> options) {
   options
       ->addOption(
-          "--experimental-vector-index",
-          "Enable the experimental vector index feature."
+          "--vector-index",
+          "Enable the vector index feature. "
           "Once in use, this option cannot be turned off again.",
           new options::BooleanParameter(&_useVectorIndex),
           options::makeFlags(arangodb::options::Flags::DefaultNoComponents,
                              arangodb::options::Flags::OnCoordinator,
                              arangodb::options::Flags::OnDBServer,
-                             arangodb::options::Flags::OnSingle,
-                             arangodb::options::Flags::Experimental))
+                             arangodb::options::Flags::OnSingle))
       .setIntroducedIn(31204)
       .setLongDescription(R"(This startup option should not be enabled for
 Agents in a cluster as it has no effect on them other than that you need to
 leave the option enabled.)");
+
+  options->addOldOption("--experimental-vector-index", "--vector-index");
 }
 
 bool VectorIndexFeature::isVectorIndexEnabled() const {
