@@ -6,6 +6,10 @@ devel
 
 * Add API for deployment ID: /_admin/deployment/id .
 
+* Rename the `--experimental-vector-index` startup option to `--vector-index`
+  and remove the experimental flag. The old name can still be used to enable the
+  vector index feature.
+
 * Add vertex collections for graph queries using edge collection syntax
   from named graphs. This means that if a query uses edge collection syntax
   and a named graph defines the from and to vertex collections for that edge
